--- a/app.css
+++ b/app.css
@@ -15,7 +15,7 @@ body{
     height:717px;
     border-radius: 45px;
     box-shadow:0 0 10px 1px rgb(0 0 0 / 50%);
-    background-image: url(/img/end.jpg);
+    background-image: url(./img/end.jpg);
     background-repeat: no-repeat;
     overflow: hidden;
     text-align: center;
